--- a/preProcessing.ipynb
+++ b/preProcessing.ipynb
@@ -44,6 +44,38 @@
    "source": [
     "data = pd.read_csv('data.csv')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15f1882f",
+   "metadata": {},
+   "source": [
+    "## General Cleaning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab30172b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c1e5d52",
+   "metadata": {},
+   "source": [
+    "## Cpu column handling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95182363",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
