--- a/preProcessing.ipynb
+++ b/preProcessing.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "c9f54628",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "a3d52dd7",
    "metadata": {},
    "outputs": [
@@ -47,7 +47,7 @@
        "(16394, 14)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "ab30172b",
    "metadata": {},
    "outputs": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "8b5c95a5",
    "metadata": {},
    "outputs": [
@@ -120,10 +120,6 @@
       "Using key columns for grouping: ['price_preview', 'created_at', 'spec_Etat', 'model_name', 'city', 'DEDICATED_GPU', 'CPU', 'RAM_SIZE', 'SCREEN_SIZE', 'SCREEN_RESOLUTION']\n",
       "Merged storage from index 10345 into 10344 and deleted 10345 for group (75000.0, '2024 11 01T15:06:57.000Z', 'JAMAIS UTILIS', 'VOSTRO', 'EZZOUAR', nan, '11TH GEN INTEL CORE I3 1145G4', '8GB', 14.1, nan)\n",
       "Auto-resolved 1 groups. New data shape: (16392, 14)\n",
-      "Merged storage from index 10345 into 10344 and deleted 10345 for group (75000.0, '2024 11 01T15:06:57.000Z', 'JAMAIS UTILIS', 'VOSTRO', 'EZZOUAR', nan, '11TH GEN INTEL CORE I3 1145G4', '8GB', 14.1, nan)\n",
-      "Auto-resolved 1 groups. New data shape: (16392, 14)\n",
-      "No groups found where RAM or storage are null in some rows and not in others while other attributes match.\n",
-      "Added 'id' column as primary key. Data shape now: (16392, 15)\n",
       "No groups found where RAM or storage are null in some rows and not in others while other attributes match.\n",
       "Added 'id' column as primary key. Data shape now: (16392, 15)\n"
      ]
@@ -326,7 +322,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
+   "id": "000ac92c",
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +332,7 @@
        "(16392, 15)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "6388ca74",
    "metadata": {},
    "outputs": [],
@@ -372,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "28b73db0",
    "metadata": {},
    "outputs": [],
@@ -396,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "d5d3f62b",
    "metadata": {},
    "outputs": [],
@@ -417,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "40b9802a",
    "metadata": {},
    "outputs": [],
@@ -451,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "8603e3ba",
    "metadata": {},
    "outputs": [
@@ -460,7 +457,17 @@
      "output_type": "stream",
      "text": [
       "LATITUDE mode SCREEN_SIZE_SNAPPED: 14.0\n",
-      "Filled missing values for LATITUDE. Now LATITUDE has 0 missing values\n"
+      "Filled missing values for LATITUDE. Now LATITUDE has 0 missing values\n",
+      "THINKPAD mode SCREEN_SIZE_SNAPPED: 14.0\n",
+      "Filled missing values for THINKPAD. Now THINKPAD has 0 missing values\n",
+      "ELITEBOOK mode SCREEN_SIZE: 14.0\n",
+      "Filled missing values for ELITEBOOK. Now ELITEBOOK has 0 missing values\n",
+      "PAVILION mode SCREEN_SIZE_SNAPPED: 15.6\n",
+      "Filled missing values for PAVILION. Now PAVILION has 0 missing values\n",
+      "PAVILION mode SCREEN_SIZE_SNAPPED: 15.6\n",
+      "Filled missing values for PAVILION. Now PAVILION has 0 missing values\n",
+      "PROBOOK mode SCREEN_SIZE_SNAPPED: 14.0\n",
+      "Filled missing values for PROBOOK. Now PROBOOK has 0 missing values\n"
      ]
     }
    ],
@@ -605,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "48563a97",
    "metadata": {},
    "outputs": [
@@ -648,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "a4526d5f",
    "metadata": {},
    "outputs": [
@@ -701,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "18173123",
    "metadata": {},
    "outputs": [
@@ -811,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "264182f2",
    "metadata": {},
    "outputs": [],
@@ -834,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "d3dfa1a0",
    "metadata": {},
    "outputs": [],
@@ -951,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "928ef500",
    "metadata": {},
    "outputs": [
@@ -975,11 +982,12 @@
     {
      "data": {
       "text/plain": [
-       "62.846163230450166"
+       "62.841630063445585"
       ]
      },
+     "execution_count": 33,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1009,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "6eaf4685",
    "metadata": {},
    "outputs": [
@@ -1019,7 +1027,7 @@
      "text": [
       "Filled 1419 missing values for THINKPAD with mode FHD\n",
       "Filled 1195 missing values for LATITUDE with mode FHD\n",
-      "Filled 1439 missing values for MACBOOK with mode QHD+\n",
+      "Filled 1438 missing values for MACBOOK with mode QHD+\n",
       "Filled 579 missing values for ELITEBOOK with mode FHD\n",
       "Filled 772 missing values for PAVILION with mode FHD\n",
       "Filled 527 missing values for VIVOBOOK with mode FHD\n",
@@ -1033,7 +1041,7 @@
       "Filled 167 missing values for PRECISION with mode FHD\n",
       "Filled 129 missing values for VICTUS with mode FHD\n",
       "Filled 127 missing values for TUF with mode FHD\n",
-      "Filled 112 missing values for VOSTRO with mode FHD\n",
+      "Filled 111 missing values for VOSTRO with mode FHD\n",
       "Filled 122 missing values for ROG with mode FHD\n",
       "Filled 126 missing values for ZBOOK with mode FHD\n",
       "Filled 111 missing values for LEGION with mode FHD\n",
@@ -1076,6 +1084,22 @@
     "\n",
     "summary['percentage_nan'] = (summary['nan_rows'] / summary['total_rows']) * 100\n",
     "\n",
+    "mode_counts = (\n",
+    "    data.dropna(subset=['SCREEN_RESOLUTION_STD'])\n",
+    "      .groupby('model_name')['SCREEN_RESOLUTION_STD']\n",
+    "      .value_counts()\n",
+    "      .rename('mode_count')\n",
+    "      .reset_index()\n",
+    "      .sort_values(['model_name', 'mode_count'], ascending=[True, False])\n",
+    "      .drop_duplicates('model_name')\n",
+    "      .set_index('model_name')\n",
+    "      [['SCREEN_RESOLUTION_STD', 'mode_count']]\n",
+    ")\n",
+    "\n",
+    "summary = summary.join(mode_counts).rename(columns={'SCREEN_RESOLUTION_STD': 'mode_resolution'})\n",
+    "\n",
+    "summary = summary.sort_values(by='total_rows', ascending=False)\n",
+    "\n",
     "\n",
     "# fill missing SCREEN_RESOLUTION_STD by model_name mode\n",
     "for model in summary.index:\n",
@@ -1099,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "e44498d4",
    "metadata": {},
    "outputs": [],
@@ -1144,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 39,
    "id": "96c3fe8f",
    "metadata": {},
    "outputs": [
@@ -1152,7 +1176,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exported cleaned data to data_cleaned.csv with shape: (16392, 15)\n"
+      "Exported cleaned data to data_cleaned.csv with shape: (16392, 17)\n"
      ]
     }
    ],
@@ -1165,9 +1189,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
